@@ -2,7 +2,7 @@ package Data::Validation;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.21.%d', q$Rev: 5 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.21.%d', q$Rev: 6 $ =~ /\d+/gmx );
 
 use Data::Validation::Constants qw( EXCEPTION_CLASS FALSE HASH NUL SPC );
 use Data::Validation::Constraints;
@@ -154,7 +154,7 @@ Data::Validation - Filter and validate data values
 
 =head1 Version
 
-Describes version v0.21.$Rev: 5 $ of L<Data::Validation>
+Describes version v0.21.$Rev: 6 $ of L<Data::Validation>
 
 =head1 Synopsis
 
